--- a/sway/config
+++ b/sway/config
@@ -1,9 +1,12 @@
 include catpuccin-mocha
 
+
 # Alt Key Leader
 set $mod Mod1
 
-font pango:Source Code Pro 12
+font pango:Source Code Pro 10
+
+focus_follows_mouse no
 
 input "type:keyboard" {
     xkb_layout us
@@ -19,19 +22,20 @@ set $right l
     set $term alacritty
 
 # Launcher
-    set $menu dmenu_path | wmenu | xargs swaymsg exec --
+    set $menu wofi --show run
 
 # Wallpaper
     output * bg ~/images/bg/sakura_tree.png fill
 
 # Outputs
-    output HDMI-A-2 resolution 1920x1080 position 0 0
+    output HDMI-A-2 mode 1920x1080 position 0 0
     output DVI-D-1 mode 1920x1080@144.001Hz position 1920 0
 
 
 ### Key bindings
 # Start a terminal
     bindsym $mod+Return exec $term
+    bindsym $mod+V exec vivaldi
 
 # Kill focused window
     bindsym $mod+q kill
@@ -55,8 +59,9 @@ set $right l
     bindsym $mod+Shift+$right move right
 
 # Switch to workspace
+    bindsym $mod+0 workspace number 0
     bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
+    bindsym $mod+2 workspace number 2 
     bindsym $mod+3 workspace number 3
     bindsym $mod+4 workspace number 4
     bindsym $mod+5 workspace number 5
@@ -64,9 +69,10 @@ set $right l
     bindsym $mod+7 workspace number 7
     bindsym $mod+8 workspace number 8
     bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
+
 
 # Move focused container to workspace
+    bindsym $mod+Shift+0 move container to workspace number 0
     bindsym $mod+Shift+1 move container to workspace number 1
     bindsym $mod+Shift+2 move container to workspace number 2
     bindsym $mod+Shift+3 move container to workspace number 3
@@ -76,13 +82,12 @@ set $right l
     bindsym $mod+Shift+7 move container to workspace number 7
     bindsym $mod+Shift+8 move container to workspace number 8
     bindsym $mod+Shift+9 move container to workspace number 9
-    bindsym $mod+Shift+0 move container to workspace number 10
 
 
 # Layout stuff:
 
 # Dont show a border
-default_border none
+default_border pixel 1
 default_floating_border none
 
 
@@ -90,6 +95,7 @@ default_floating_border none
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
+bindsym $mod+m workspace back_and_forth
 
 # Make the current focus fullscreen
 bindsym $mod+f fullscreen
@@ -100,8 +106,6 @@ bindsym $mod+Shift+space floating toggle
 # Swap focus between the tiling area and the floating area
 bindsym $mod+space focus mode_toggle
 
-# Move focus to the parent container
-bindsym $mod+a focus parent
 
 bar {
     position top
@@ -119,7 +123,6 @@ bar {
     }
 }
 
-# f.lux replacement
-exec gammastep
 
+exec_always gammastep
 include /etc/sway/config.d/*
