--- a/sway/config
+++ b/sway/config
@@ -1,6 +1,5 @@
 include catpuccin-mocha
 
-
 # Alt Key Leader
 set $mod Mod1
 
@@ -13,81 +12,96 @@ input "type:keyboard" {
     xkb_model kinesis
 }
 
+
 set $left h
 set $down j
 set $up k
 set $right l
 
 # Terminal
-    set $term alacritty
+set $term alacritty
 
 # Launcher
-    set $menu wofi --show run
+set $menu dmenu_path | wmenu | xargs swaymsg exec --
 
 # Wallpaper
-    output * bg ~/images/bg/sakura_tree.png fill
+output * bg ~/images/bg/sakura_tree.png fill
 
 # Outputs
-    output HDMI-A-2 mode 1920x1080 position 0 0
-    output DVI-D-1 mode 1920x1080@144.001Hz position 1920 0
+output HDMI-A-2 mode 1920x1080 position 0 0
+output DVI-D-1 mode 1920x1080@144.001Hz position 1920 0
 
 
 ### Key bindings
 # Start a terminal
-    bindsym $mod+Return exec $term
-    bindsym $mod+V exec vivaldi
+bindsym $mod+Return exec $term
+bindsym $mod+u exec vivaldi
 
 # Kill focused window
-    bindsym $mod+q kill
+bindsym $mod+q kill
 
 # Start your launcher
-    bindsym $mod+d exec $menu
+bindsym $mod+d exec $menu
 
 # Reload the configuration file
-    bindsym $mod+r reload
+bindsym $mod+r reload
 
 # Moving around:
-    bindsym $mod+$left focus left
-    bindsym $mod+$down focus down
-    bindsym $mod+$up focus up
-    bindsym $mod+$right focus right
+bindsym $mod+$left focus left
+bindsym $mod+$down focus down
+bindsym $mod+$up focus up
+bindsym $mod+$right focus right
 
 # Move the focused window with the same, but add Shift
-    bindsym $mod+Shift+$left move left
-    bindsym $mod+Shift+$down move down
-    bindsym $mod+Shift+$up move up
-    bindsym $mod+Shift+$right move right
+bindsym $mod+Shift+$left move left
+bindsym $mod+Shift+$down move down
+bindsym $mod+Shift+$up move up
+bindsym $mod+Shift+$right move right
 
 # Switch to workspace
-    bindsym $mod+0 workspace number 0
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2 
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    bindsym $mod+6 workspace number 6
-    bindsym $mod+7 workspace number 7
-    bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 0
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2 
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
 
 
 # Move focused container to workspace
-    bindsym $mod+Shift+0 move container to workspace number 0
-    bindsym $mod+Shift+1 move container to workspace number 1
-    bindsym $mod+Shift+2 move container to workspace number 2
-    bindsym $mod+Shift+3 move container to workspace number 3
-    bindsym $mod+Shift+4 move container to workspace number 4
-    bindsym $mod+Shift+5 move container to workspace number 5
-    bindsym $mod+Shift+6 move container to workspace number 6
-    bindsym $mod+Shift+7 move container to workspace number 7
-    bindsym $mod+Shift+8 move container to workspace number 8
-    bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+0 move container to workspace number 0
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
 
+#
+# Resizing containers:
+#
+mode "resize" {
+    bindsym $left resize shrink width 10px
+    bindsym $down resize grow height 10px
+    bindsym $up resize shrink height 10px
+    bindsym $right resize grow width 10px
+
+    bindsym Return mode "default"
+    bindsym $mod+o mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+o mode "resize"
 
 # Layout stuff:
 
 # Dont show a border
-default_border pixel 1
+default_border pixel 3
 default_floating_border none
 
 
@@ -96,6 +110,12 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 bindsym $mod+m workspace back_and_forth
+
+# You can "split" the current object of your focus with
+# $mod+b or $mod+v, for horizontal and vertical splits
+# respectively.
+bindsym $mod+b splith
+bindsym $mod+v splitv
 
 # Make the current focus fullscreen
 bindsym $mod+f fullscreen
@@ -106,20 +126,24 @@ bindsym $mod+Shift+space floating toggle
 # Swap focus between the tiling area and the floating area
 bindsym $mod+space focus mode_toggle
 
+# Move focus to the parent container
+bindsym $mod+a focus parent
 
 bar {
+    mode dock
     position top
     status_command while date +'%Y-%m-%d %X'; do sleep 1; done
+    font pango:Source Code Pro 12
     colors {
         background         $base
-        statusline         $text
-        focused_statusline $text
-        focused_separator  $base
-        focused_workspace  $base $base $green
-        active_workspace   $base $base $blue
-        inactive_workspace $base $base $surface1
-        urgent_workspace   $base $base $surface1
-        binding_mode       $base $base $surface1
+            statusline         $text
+            focused_statusline $text
+            focused_separator  $red
+            focused_workspace  $base $base $green
+            active_workspace   $base $base $blue
+            inactive_workspace $base $base $surface1
+            urgent_workspace   $base $base $surface1
+            binding_mode       $base $base $red
     }
 }
 
