--- a/sway/config
+++ b/sway/config
@@ -1,11 +1,17 @@
-include catpuccin-mocha
 
 # Alt Key Leader
 set $mod Mod1
 
+include catpuccin-mocha
+
+bindsym --locked --no-repeat {
+     KP_BEGIN exec "pactl set-source-mute @DEFAULT_SOURCE@ 0" 
+     --release KP_BEGIN exec "pactl set-source-mute @DEFAULT_SOURCE@ 1" 
+}
+
 font pango:Source Code Pro 10
 
-focus_follows_mouse no
+tiling_drag enable
 
 input "type:keyboard" {
     xkb_layout us
@@ -29,8 +35,7 @@ output * bg ~/images/bg/sakura_tree.png fill
 
 # Outputs
 output HDMI-A-2 mode 1920x1080 position 0 0
-output DVI-D-1 mode 1920x1080 position 1920 0
-
+output DVI-D-1 mode 1920x1080@144Hz position 1920 0
 
 ### Key bindings
 # Start a terminal
@@ -59,51 +64,25 @@ bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
 
 # Switch to workspace
-bindsym $mod+0 workspace number 0
 bindsym $mod+1 workspace number 1
 bindsym $mod+2 workspace number 2 
 bindsym $mod+3 workspace number 3
 bindsym $mod+4 workspace number 4
 bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
 
 
 # Move focused container to workspace
-bindsym $mod+Shift+0 move container to workspace number 0
 bindsym $mod+Shift+1 move container to workspace number 1
 bindsym $mod+Shift+2 move container to workspace number 2
 bindsym $mod+Shift+3 move container to workspace number 3
 bindsym $mod+Shift+4 move container to workspace number 4
 bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
 
-#
 # Resizing containers:
-#
-mode "resize" {
-    bindsym $left resize shrink width 10px
-    bindsym $down resize grow height 10px
-    bindsym $up resize shrink height 10px
-    bindsym $right resize grow width 10px
-
-    bindsym Return mode "default"
-    bindsym $mod+o mode "default"
-    bindsym Escape mode "default"
-}
-bindsym $mod+o mode "resize"
-
-# Layout stuff:
 
 # Dont show a border
 default_border pixel 2
 default_floating_border none
-
 
 # Switch the current container between different layout styles
 bindsym $mod+s layout stacking
@@ -135,7 +114,7 @@ bar {
     status_command while date +'%Y-%m-%d %X'; do sleep 1; done
     font pango:Source Code Pro 12
     colors {
-        background         $base
+            background         $base
             statusline         $text
             focused_statusline $text
             focused_separator  $red
